--- a/tv_models/templates/tv_models/tvmodel_detail.html
+++ b/tv_models/templates/tv_models/tvmodel_detail.html
@@ -9,7 +9,7 @@
         <p class="model-content">HDR-{{ object.hdr }}</p>
         <p class="model-content">Year-{{ object.model_year }}</p>
         <p class="model-content">Describe-{{ object.content }}</p>
-        <p class="model-content">manual - <a  href="{{object.manual}}"></a></p>
+        <button class="manual-btn"><a href="{{object.manual}}">manual</a></button>
     </div>
 </article>
 
